# l10n-spain

./: README.md  requirements.txt
account_promissory_note_caixabank/: README.rst
account_promissory_note_caixabank/readme/: CONFIGURE.md
account_promissory_note_caixabank/static/description/: index.html
delivery_gls_asm/: README.rst
delivery_gls_asm/static/description/: index.html
l10n_es_account_banking_sepa_fsdd/: __manifest__.py
l10n_es_account_statement_import_n43/: README.rst
l10n_es_account_statement_import_n43/static/description/: index.html
l10n_es_aeat/: README.rst
l10n_es_aeat/i18n/: es.po  l10n_es_aeat.pot
l10n_es_aeat/static/description/: index.html
l10n_es_aeat/views/: aeat_report_view.xml  aeat_tax_agency_view.xml
l10n_es_aeat/wizard/: export_to_boe_wizard.xml
l10n_es_aeat_mod111/: README.rst
l10n_es_aeat_mod111/static/description/: index.html
l10n_es_aeat_mod303/: README.rst
l10n_es_aeat_mod303/static/description/: index.html
l10n_es_cnae/: README.rst
l10n_es_cnae/static/description/: index.html
l10n_es_mis_report/: README.rst
l10n_es_mis_report/static/description/: index.html
l10n_es_partner/: README.rst
l10n_es_partner/static/description/: index.html
l10n_es_partner_mercantil/: README.rst
l10n_es_partner_mercantil/static/description/: index.html
l10n_es_payment_order_confirming_aef/: README.rst
l10n_es_payment_order_confirming_aef/static/description/: index.html
l10n_es_toponyms/: README.rst
l10n_es_toponyms/i18n/: es.po
l10n_es_toponyms/static/description/: index.html
setup/_metapackage/: pyproject.toml
