[project]
name = "odoo-addons-oca-l10n-spain"
version = "18.0.20250417.0"
dependencies = [
    "odoo-addon-l10n_es_account_statement_import_n43==18.0.*",
    "odoo-addon-l10n_es_partner==18.0.*",
    "odoo-addon-l10n_es_partner_mercantil==18.0.*",
    "odoo-addon-l10n_es_toponyms==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
