[project]
name = "odoo-addons-oca-l10n-spain"
version = "18.0.20250608.0"
dependencies = [
    "odoo-addon-account_promissory_note_caixabank==18.0.*",
    "odoo-addon-delivery_gls_asm==18.0.*",
    "odoo-addon-l10n_es_account_asset==18.0.*",
    "odoo-addon-l10n_es_account_banking_sepa_fsdd==18.0.*",
    "odoo-addon-l10n_es_account_statement_import_n43==18.0.*",
    "odoo-addon-l10n_es_aeat==18.0.*",
    "odoo-addon-l10n_es_aeat_mod111==18.0.*",
    "odoo-addon-l10n_es_aeat_mod303==18.0.*",
    "odoo-addon-l10n_es_partner==18.0.*",
    "odoo-addon-l10n_es_partner_mercantil==18.0.*",
    "odoo-addon-l10n_es_payment_order_confirming_aef==18.0.*",
    "odoo-addon-l10n_es_toponyms==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
